--- a/questionario.html
+++ b/questionario.html
@@ -57,56 +57,53 @@
     </header>
 
     <main>
-        <article>
-            <!-- Page Content -->
 
-            <div class="form" id="formquest">
+        <div class="form" id="formquest">
 
 
-                <form>
-                    <label class="label lead" id="tituloquestionario">1) Selecione uma Caracteristica</label>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                            value="option1" checked>
-                        <label class="form-check-label" for="exampleRadios1" id="q1">
-                            Bom Companheiro
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
-                            value="option2">
-                        <label class="form-check-label" for="exampleRadios2" id="q2">
-                            Audacioso
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
-                            value="option3">
-                        <label class="form-check-label" for="exampleRadios3" id="q3">
-                            Sensível
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4"
-                            value="option4">
-                        <label class="form-check-label" for="exampleRadios4" id="q4">
-                            Bom-Humorado
-                        </label>
-                    </div>
-                    <div id="botoesForm">
-                        <button type="button" class="btn btn-primary" onclick="anterior();">Back</button>
-                        <button type="button" class="btn btn-success" onclick="proximo();">Next</button>
-                    </div>
-                </form>
+            <form>
+                <label class="label lead" id="tituloquestionario">1) Selecione uma Caracteristica</label>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                        value="option1" checked>
+                    <label class="form-check-label" for="exampleRadios1" id="q1">
+                        Bom Companheiro
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
+                        value="option2">
+                    <label class="form-check-label" for="exampleRadios2" id="q2">
+                        Audacioso
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
+                        value="option3">
+                    <label class="form-check-label" for="exampleRadios3" id="q3">
+                        Sensível
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4"
+                        value="option4">
+                    <label class="form-check-label" for="exampleRadios4" id="q4">
+                        Bom-Humorado
+                    </label>
+                </div>
+                <div id="botoesForm">
+                    <button type="button" class="btn btn-primary" onclick="anterior();">Back</button>
+                    <button type="button" class="btn btn-success" onclick="proximo();">Next</button>
+                </div>
+            </form>
 
-            </div class="container">
-
+        </div>
+        <div class="container">
             <!--Novo-->
             <canvas id="horizontalBar"></canvas>
-            </div>
-            <!--<br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
+        </div>
+        <!--<br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
 
-        </article>
     </main>
     <footer class="py-2 bg-dark fixed-bottom" id="rodapeQuest">
         <div class="container">
