--- a/subviews/fleumatico.html
+++ b/subviews/fleumatico.html
@@ -58,7 +58,7 @@
         <article>
             <div class="container">
                 <!-- Jumbotron Header -->
-                <div class="jumbotron my-4 bg-primary text-white">
+                <div class="jumbotron my-4 bg-warning text-black">
                     <h1 class="display-3">Fleumático</h1>
                     <p class="lead">Esta é uma página que descreve o temperamento fleumático.</p>
                 </div>
