--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           <div class="col-lg-3 col-md-6 mb-4 zoom">
             <div class="card">
-              <img class="card-img-top" src="imagem/terra.png" alt="">
+              <img class="card-img-top" src="imagem/agua.png" alt="">
               <div class="card-body">
                 <h4 class="card-title">Melancólico</h4>
                 <p class="card-text text-justify">O temperamento bilioso ou melancólico tem traços de nervoso e de
@@ -131,14 +131,14 @@
                   interior.</p>
               </div>
               <div class="card-footer">
-                <a href="subviews/melancolico.html" class="btn btn-warning">Ver detalhes »</a>
+                <a href="subviews/melancolico.html" class="btn btn-primary">Ver detalhes »</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mb-4 zoom">
             <div class="card">
-              <img class="card-img-top" src="imagem/agua.png" alt="">
+              <img class="card-img-top" src="imagem/terra.png" alt="">
               <div class="card-body">
                 <h4 class="card-title">Fleumático</h4>
                 <p class="card-text text-justify">O temperamento linfático ou fleumático tem traços de sanguíneo e de
@@ -147,7 +147,7 @@
                 </p>
               </div>
               <div class="card-footer">
-                <a href="subviews/fleumatico.html" class="btn btn-primary">Ver detalhes »</a>
+                <a href="subviews/fleumatico.html" class="btn btn-warning">Ver detalhes »</a>
               </div>
             </div>
           </div>
