--- a/subviews/melancolico.html
+++ b/subviews/melancolico.html
@@ -58,7 +58,7 @@
         <article>
             <div class="container">
                 <!-- Jumbotron Header -->
-                <div class="jumbotron my-4 bg-warning text-black">
+                <div class="jumbotron my-4 bg-primary text-white"> 
                     <h1 class="display-3">Melancólico</h1>
                     <p class="lead">Esta é uma página que descreve o temperamento melancólico.</p>
                 </div>
