--- a/subviews/melancolico.html
+++ b/subviews/melancolico.html
@@ -91,7 +91,7 @@
                         <div class="row">
                             <div class="col-lg-8 mx-auto">
                                 <h2>Elemental</h2>
-                                <p class="lead">Possui como elemento a Terra.</p>
+                                <p class="lead">Possui como elemento a Água.</p>
                             </div>
                         </div>
                     </div>
