--- a/subviews/fleumatico.html
+++ b/subviews/fleumatico.html
@@ -93,7 +93,7 @@
                         <div class="row">
                             <div class="col-lg-8 mx-auto">
                                 <h2>Elemental</h2>
-                                <p class="lead">Possui como elemento a Água.
+                                <p class="lead">Possui como elemento a Terra.
                                     <!--<img src="../imagem/agua.png" width="20" height="20" alt="água" srcset="">-->
                                 </p>
                             </div>
