correção de nomeclatura e elementos trocados

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
               aria-expanded="false">Temperamentos</a>
             <div class="dropdown-menu" aria-labelledby="dropdown03">
               <a class="dropdown-item" href="subviews/sanguineo.html">Sanguíneo</a>
-              <a class="dropdown-item" href="subviews/colerico.html">Colérico</a>
-              <a class="dropdown-item" href="subviews/melancolico.html">Melancólico</a>
-              <a class="dropdown-item" href="subviews/fleumatico.html">Fleumático</a>
+              <a class="dropdown-item" href="subviews/colerico.html">Nervoso</a>
+              <a class="dropdown-item" href="subviews/melancolico.html">Bilioso</a>
+              <a class="dropdown-item" href="subviews/fleumatico.html">Linfático</a>
             </div>
           </li>
           <li class="nav-item">
@@ -104,7 +104,7 @@
             <div class="card">
               <img class="card-img-top" src="imagem/fogo.png" alt="">
               <div class="card-body">
-                <h4 class="card-title">Colérico</h4>
+                <h4 class="card-title">Nervoso</h4>
                 <p class="card-text text-justify">O temperamento nervoso ou colérico tem traços de sanguíneo e de
                   bilioso, seus
                   dois adjacentes, porém não tem traços de linfático, seu antagônico ou oposto. Tem grande energia e
@@ -120,9 +120,9 @@
 
           <div class="col-lg-3 col-md-6 mb-4 zoom">
             <div class="card">
-              <img class="card-img-top" src="imagem/agua.png" alt="">
+              <img class="card-img-top" src="imagem/terra.png" alt="">
               <div class="card-body">
-                <h4 class="card-title">Melancólico</h4>
+                <h4 class="card-title">Bilioso</h4>
                 <p class="card-text text-justify">O temperamento bilioso ou melancólico tem traços de nervoso e de
                   linfático, porém
                   não tem traços de sanguíneo, o seu oposto. Tem energia e pouca excitação e liga-se ao elemento
@@ -131,23 +131,23 @@
                   interior.</p>
               </div>
               <div class="card-footer">
-                <a href="subviews/melancolico.html" class="btn btn-primary">Ver detalhes »</a>
+                <a href="subviews/melancolico.html" class="btn btn-warning">Ver detalhes »</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mb-4 zoom">
             <div class="card">
-              <img class="card-img-top" src="imagem/terra.png" alt="">
+              <img class="card-img-top" src="imagem/agua.png" alt="">
               <div class="card-body">
-                <h4 class="card-title">Fleumático</h4>
+                <h4 class="card-title">Linfático</h4>
                 <p class="card-text text-justify">O temperamento linfático ou fleumático tem traços de sanguíneo e de
                   bilioso, porém não tem traços de nervoso, o seu oposto. Tem pouca energia e pouca excitação e
                   liga-se ao elemento água. É o temperamento dos tranqüilos que só querem viver com mínimo esforço.
                 </p>
               </div>
               <div class="card-footer">
-                <a href="subviews/fleumatico.html" class="btn btn-warning">Ver detalhes »</a>
+                <a href="subviews/fleumatico.html" class="btn btn-primary">Ver detalhes »</a>
               </div>
             </div>
           </div>
