--- a/questionario.html
+++ b/questionario.html
@@ -40,13 +40,13 @@
                         <a class="nav-link" href="subviews/sanguineo.html">Sanguíneo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="subviews/colerico.html">Colérico</a>
+                        <a class="nav-link" href="subviews/colerico.html">Nervoso</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="subviews/melancolico.html">Melancólico</a>
+                        <a class="nav-link" href="subviews/melancolico.html">Bilioso</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="subviews/fleumatico.html">Fleumático</a>
+                        <a class="nav-link" href="subviews/fleumatico.html">Linfático</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sobre.html">Sobre</a>
