--- a/sobre.html
+++ b/sobre.html
@@ -41,9 +41,9 @@
                             aria-haspopup="true" aria-expanded="false">Temperamentos</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown03">
                             <a class="dropdown-item" href="subviews/sanguineo.html">Sanguíneo</a>
-                            <a class="dropdown-item" href="subviews/colerico.html">Colérico</a>
-                            <a class="dropdown-item" href="subviews/melancolico.html">Melancólico</a>
-                            <a class="dropdown-item" href="subviews/fleumatico.html">Fleumático</a>
+                            <a class="dropdown-item" href="subviews/colerico.html">Nervoso</a>
+                            <a class="dropdown-item" href="subviews/melancolico.html">Bilioso</a>
+                            <a class="dropdown-item" href="subviews/fleumatico.html">Linfático</a>
                         </div>
                     </li>
                     <li class="nav-item active">
@@ -85,41 +85,9 @@
                         <h3>Heitor H. Gil Alexandre
                             <small>Administrador</small>
                         </h3>
-                        <p>What does this team member to? Keep it short! This is also a great spot for social links!
-                        </p>
+                        <p>se o hj fose amanha e o amanha fose ontem hj</p>
                     </div>
-                    <div class="col-lg-4 col-sm-6 text-center mb-4">
-                        <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-                        <h3>John Smith
-                            <small>Job Title</small>
-                        </h3>
-                        <p>What does this team member to? Keep it short! This is also a great spot for social links!
-                        </p>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 text-center mb-4">
-                        <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-                        <h3>John Smith
-                            <small>Job Title</small>
-                        </h3>
-                        <p>What does this team member to? Keep it short! This is also a great spot for social links!
-                        </p>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 text-center mb-4">
-                        <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-                        <h3>John Smith
-                            <small>Job Title</small>
-                        </h3>
-                        <p>What does this team member to? Keep it short! This is also a great spot for social links!
-                        </p>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 text-center mb-4">
-                        <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-                        <h3>John Smith
-                            <small>Job Title</small>
-                        </h3>
-                        <p>What does this team member to? Keep it short! This is also a great spot for social links!
-                        </p>
-                    </div>
+
                 </div>
 
             </div>
