--- a/subviews/colerico.html
+++ b/subviews/colerico.html
@@ -41,9 +41,9 @@
                             aria-haspopup="true" aria-expanded="false">Temperamentos</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown03">
                             <a class="dropdown-item" href="../subviews/sanguineo.html">Sanguíneo</a>
-                            <a class="dropdown-item" href="../subviews/colerico.html">Colérico</a>
-                            <a class="dropdown-item" href="../subviews/melancolico.html">Melancólico</a>
-                            <a class="dropdown-item" href="../subviews/fleumatico.html">Fleumático</a>
+                            <a class="dropdown-item" href="../subviews/colerico.html">Nervoso</a>
+                            <a class="dropdown-item" href="../subviews/melancolico.html">Bilioso</a>
+                            <a class="dropdown-item" href="../subviews/fleumatico.html">Linfático</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -59,8 +59,8 @@
             <div class="container">
                 <!-- Jumbotron Header -->
                 <div class="jumbotron my-4 bg-danger text-white">
-                    <h1 class="display-3">Colérico</h1>
-                    <p class="lead">Esta é uma página que descreve o temperamento colérico.</p>
+                    <h1 class="display-3">Nervoso</h1>
+                    <p class="lead">Esta é uma página que descreve o temperamento nervoso.</p>
                 </div>
 
                 <section id="about">
