--- a/subviews/fleumatico.html
+++ b/subviews/fleumatico.html
@@ -41,9 +41,9 @@
                             aria-haspopup="true" aria-expanded="false">Temperamentos</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown03">
                             <a class="dropdown-item" href="../subviews/sanguineo.html">Sanguíneo</a>
-                            <a class="dropdown-item" href="../subviews/colerico.html">Colérico</a>
-                            <a class="dropdown-item" href="../subviews/melancolico.html">Melancólico</a>
-                            <a class="dropdown-item" href="../subviews/fleumatico.html">Fleumático</a>
+                            <a class="dropdown-item" href="../subviews/colerico.html">Nervoso</a>
+                            <a class="dropdown-item" href="../subviews/melancolico.html">Bilioso</a>
+                            <a class="dropdown-item" href="../subviews/fleumatico.html">Linfático</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -58,9 +58,9 @@
         <article>
             <div class="container">
                 <!-- Jumbotron Header -->
-                <div class="jumbotron my-4 bg-warning text-black">
-                    <h1 class="display-3">Fleumático</h1>
-                    <p class="lead">Esta é uma página que descreve o temperamento fleumático.</p>
+                <div class="jumbotron my-4 bg-primary text-white">
+                    <h1 class="display-3">Linfático</h1>
+                    <p class="lead">Esta é uma página que descreve o temperamento linfático.</p>
                 </div>
 
                 <section id="about">
@@ -93,7 +93,7 @@
                         <div class="row">
                             <div class="col-lg-8 mx-auto">
                                 <h2>Elemental</h2>
-                                <p class="lead">Possui como elemento a Terra.
+                                <p class="lead">Possui como elemento a Água.
                                     <!--<img src="../imagem/agua.png" width="20" height="20" alt="água" srcset="">-->
                                 </p>
                             </div>
