--- a/subviews/sanguineo.html
+++ b/subviews/sanguineo.html
@@ -41,9 +41,9 @@
                             aria-haspopup="true" aria-expanded="false">Temperamentos</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown03">
                             <a class="dropdown-item" href="../subviews/sanguineo.html">Sanguíneo</a>
-                            <a class="dropdown-item" href="../subviews/colerico.html">Colérico</a>
-                            <a class="dropdown-item" href="../subviews/melancolico.html">Melancólico</a>
-                            <a class="dropdown-item" href="../subviews/fleumatico.html">Fleumático</a>
+                            <a class="dropdown-item" href="../subviews/colerico.html">Nervoso</a>
+                            <a class="dropdown-item" href="../subviews/melancolico.html">Bilioso</a>
+                            <a class="dropdown-item" href="../subviews/fleumatico.html">Linfático</a>
                         </div>
                     </li>
                     <li class="nav-item">
