--- a/sobre.html
+++ b/sobre.html
@@ -85,7 +85,7 @@
                         <h3>Heitor H. Gil Alexandre
                             <small>Administrador</small>
                         </h3>
-                        <p>se o hj fose amanha e o amanha fose ontem hj</p>
+                        <p>Se o hoje fosse amanhã e o amanhã fosse ontem hoje.</p>
                     </div>
 
                 </div>
